# seo-flow

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  REPO_MAP.md  TESTING.md  UI_MAP.md  UI_MAP_v2.md  alembic.ini  backup.cmd  docker-compose.yml  pyproject.toml  start-local.cmd
alembic/: env.py
app/: __init__.py
backups/Przed_zmian__Sitecentric/config/: .env.example  pyproject.toml
backups/Przed_zmian__Sitecentric/config/scripts/: dev.ps1  start-local.ps1
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: dev.ps1  first-run.ps1  start-local.ps1
tests/: competitive_gap_test_utils.py  conftest.py  test_ai_review_editor_block_service.py  test_ai_review_editor_migration.py  test_ai_review_editor_review_service.py  test_ai_review_editor_rewrite_service.py  test_ai_review_editor_version_service.py  test_alembic_revision_ids.py  test_api_ai_review_editor.py  test_api_competitive_gap.py  test_api_content_generator_assets.py  test_api_jobs_list.py  test_api_site_compare.py  test_api_sites.py  test_api_stage2.py  test_api_stage2_1.py  test_api_stage5.py  test_audit_service.py  test_cannibalization.py  test_competitive_gap_cluster_state_migration.py  test_competitive_gap_cluster_state_service.py  test_competitive_gap_evaluation_service.py  test_competitive_gap_extraction_service.py  test_competitive_gap_lean_migration.py  test_competitive_gap_semantic_arbiter_service.py  test_competitive_gap_semantic_service.py  test_competitive_gap_service.py  test_competitor_sync_service.py  (+33 more)
(+308 files in other folders)
